<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MiVehiculo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_encabezado_vehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFD600"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/mi_vehiculo"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80sp" />

        <EditText
            android:id="@+id/main_marca"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/main_modelo"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/modelo"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/main_color"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/color"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/main_nAcientos"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/nAcientos"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <EditText
            android:id="@+id/main_nSeguro"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/nSeguro"
            android:inputType="text" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="100sp" />
        <Button
            android:id="@+id/update_vehiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFD600"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:text="@string/update"
            android:textColor="#000000"/>
    </LinearLayout>

</FrameLayout>