<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegistroPago">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFD600"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/header_pay"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80sp" />

        <EditText
            android:id="@+id/paypal"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/paypal"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <TextView
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disponible"
                android:layout_gravity="center"/>
        <Switch
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/disponible"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="80sp" />

        <ProgressBar
            android:id="@+id/loading_acount"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/finishReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFD600"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingHorizontal="30dp"
            android:text="@string/finish"
            android:textColor="#000000" />
    </LinearLayout>

</FrameLayout>